[gd_scene load_steps=10 format=3 uid="uid://b8b4lhmyli4n8"]

[ext_resource type="Texture2D" uid="uid://cc1g728f6j37j" path="res://graphics/ui/bullet.png" id="1_2q0ic"]
[ext_resource type="Theme" uid="uid://6481xyblfouf" path="res://scenes/user_interface/main_theme.tres" id="1_s5bf5"]
[ext_resource type="Script" path="res://scenes/user_interface/ui.gd" id="1_y311c"]
[ext_resource type="Texture2D" uid="uid://k72fetrtonj0" path="res://graphics/ui/grenade.png" id="2_xt26x"]
[ext_resource type="Texture2D" uid="uid://caw2wqj3ku1wl" path="res://graphics/ui/progress_bar/bg.png" id="4_s4tlc"]
[ext_resource type="Texture2D" uid="uid://5hclf41m5ab2" path="res://graphics/ui/progress_bar/over.png" id="5_cln1j"]
[ext_resource type="Texture2D" uid="uid://dyl0o6krfqenj" path="res://graphics/ui/progress_bar/progress.png" id="6_awy1n"]
[ext_resource type="Script" path="res://scenes/user_interface/Cursor.gd" id="8_2216r"]
[ext_resource type="Texture2D" uid="uid://cidc4rmb5xsv3" path="res://graphics/ui/crosshair159.png" id="8_ecdhq"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_y311c")

[node name="LaserCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.02
anchor_top = 0.88
anchor_right = 0.02
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="LaserCounter"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="LaserCounter/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_s5bf5")
text = "6"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="LaserCounter/VBoxContainer"]
layout_mode = 2
texture = ExtResource("1_2q0ic")
expand_mode = 4

[node name="GrenadeCounter" type="Control" parent="."]
layout_mode = 3
anchor_left = 0.06
anchor_top = 0.88
anchor_right = 0.07
anchor_bottom = 1.0
offset_left = 0.200005
offset_top = -40.4
offset_right = 40.2
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="GrenadeCounter"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GrenadeCounter/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_s5bf5")
text = "4"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="GrenadeCounter/VBoxContainer"]
layout_mode = 2
texture = ExtResource("2_xt26x")
expand_mode = 4
flip_h = true

[node name="HealthContainer" type="MarginContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -33.0
offset_right = 150.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 30

[node name="TextureProgressBar" type="TextureProgressBar" parent="HealthContainer"]
layout_mode = 2
value = 88.0
texture_under = ExtResource("4_s4tlc")
texture_over = ExtResource("5_cln1j")
texture_progress = ExtResource("6_awy1n")

[node name="StaminaContainer" type="MarginContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 200.0
grow_vertical = 0
theme_override_constants/margin_left = 15
theme_override_constants/margin_right = 0

[node name="ProgressBar" type="ProgressBar" parent="StaminaContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 100.0

[node name="Cursor" type="Sprite2D" parent="."]
position = Vector2(408, 472)
texture = ExtResource("8_ecdhq")
script = ExtResource("8_2216r")
